gap fix

--- a/shop/css.css
+++ b/shop/css.css
@@ -23,12 +23,15 @@ header h1 {
 ul {
   list-style: none;
   display: flex;
-  gap: 10px;
+  /* gap: 10px; */
   /* margin-right: 10px; */
 }
 li {
   cursor: pointer;
   font-size: 1.2rem;
+}
+li+li{
+  margin-left: 10px;
 }
 /* span,
 span::before,
@@ -40,9 +43,12 @@ span::before{bottom: 8px;} span::after{top: 8px;} */
 .options{
   display: flex;
   justify-content: center;
-  gap: 5%;
+  /* gap: 5%; */
   margin-top: 15px;
   font-size: 1.7rem;
+}
+.options > * + *{
+  margin-left: 5%;
 }
 select{
   font-size: 1.2rem;
@@ -52,23 +58,23 @@ select{
 .products {
   margin-top: 30px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, 280px);
-  place-content: center;
-  row-gap: 15px;
+  grid-template-columns: repeat(auto-fit, 275px);
   margin-bottom: 40px;
+  place-content: center;
+  /* place-items: center; */
+  border: 1px red solid;
+  row-gap: 15px;
+  column-gap: 10px;
 }
-
 .product {
   background-color: white;
   border: 1px rgb(204, 204, 204) solid;
-  width: 90%;
-  max-width: 280px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 5px 0px;
-  flex: auto;
 }
+
 
 .product h3 {
   text-align: center;
@@ -77,7 +83,7 @@ select{
 .product img {
   margin-top: 20px;
   width: 100%;
-  object-fit: cover;
+  max-width: fit-content;
 }
 .details {
   display: flex;
@@ -103,4 +109,11 @@ footer {
     row-gap: 15px;
     place-items: center;
   }
+}
+
+@media (min-width: 768px) {
+  .products{
+    grid-template-columns: repeat(3, 240px);
+  }
+  
 }
